adding evaluate_fever.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,12 @@ wikipedia>=1.4.0
 
 # Optional UI
 gradio>=3.0.0
+
+# FEVER evaluation dependencies
+datasets>=2.12.0
+tqdm>=4.64.0
+pyarrow>=16.0.0
+
+# Hugging Face Hub & packaging
+huggingface_hub>=0.17.0
+packaging>=23.0
